Pass the plugin keyword when creating generators. This should make the Ruby binding work again.

BUG: 177537

svn path=/trunk/KDE/kdegraphics/okular/; revision=895926